tests/lean/302.lean.expected.out
302.lean:1:8-1:11: error: Function expected at
  m
but this term has type
  ?m

Note: Expected a function because this term is being applied to the argument
  0
